--- a/E-Commerce/Views/Product/ProductDetails.cshtml
+++ b/E-Commerce/Views/Product/ProductDetails.cshtml
@@ -146,7 +146,10 @@
                 <h1>@Model.Price EGP</h1>
                 <p>@Model.Description</p>
                 <br>
-                <button onclick="window.location.href='/Home/Index';">Add to Cart</button>
+                <form asp-controller="ShoppingCart" asp-action="AddToCart" method="post">
+                    <input type="hidden" name="productId" value="@Model.Id" />
+                    <button type="submit">Add to Cart</button>
+                </form>
             </div>
         </div>
     </div>
