--- a/E-Commerce/Views/Shared/_MyLayout.cshtml
+++ b/E-Commerce/Views/Shared/_MyLayout.cshtml
@@ -224,7 +224,7 @@
                         else
                         {
                             <li class="Home-page"><a href="/Home/Index/">Home</a></li>
-                            @* <li class="About-us"><a href="#">About</a></li> *@
+                            <li class="About-us"><a href="/Order/CustomerOrders">My Orders</a></li>
                             <li class="ShopPrd"><a href="/Product/Index/">Shop</a></li>
                             <li class="contact-info"><a href="#contact-info">Contact</a></li>
                         }
