--- a/E-Commerce/Views/Shared/_MyLayout.cshtml
+++ b/E-Commerce/Views/Shared/_MyLayout.cshtml
@@ -214,12 +214,15 @@
                         <li class="AddUser"><a href="/Account/AddUserForm">Add User</a></li>
                         @* <li class="AddPrd"><a href="/Product/ManageProducts">Manage Products</a></li> *@
                         <li class="Addcat"><a href="/Category/ManageCategories">Manage Categories</a></li>
+                        <li class="Home-page"><a href="/Order/AdminOrders/">Manage Orders</a></li>
                     }
                     else
                     {
                         if (User.IsInRole("Seller") == true)
                         {
                             <li class="Home-page"><a href="/Product/ProductsForSeller/">Home</a></li>
+                            <li class="Home-page"><a href="/Order/SellerOrders/">My Orders</a></li>
+
                         }
                         else
                         {
