--- a/E-Commerce/Views/Order/CustomerOrders.cshtml
+++ b/E-Commerce/Views/Order/CustomerOrders.cshtml
@@ -121,6 +121,15 @@
         <h1>My Orders</h1>
     </div>
     <div class="orders-container">
+        @if(Model.Count == 0){
+            <br></br>
+            <br></br>
+            <br></br>
+            <br></br>
+            <br></br>
+            <br></br>
+			<h2 style="text-align: center;">You have no orders yet.</h2>
+		}
         @foreach (var order in Model)
         {
             <div class="order-card">
