--- a/E-Commerce/Views/Order/SellerOrders.cshtml
+++ b/E-Commerce/Views/Order/SellerOrders.cshtml
@@ -135,6 +135,12 @@
 <body>
     <div class="container">
         <div class="header">My Orders</div>
+        
+        @if(Model.Count() == 0)
+        {
+            <h2 style="text-align: center;">You have no orders yet.</h2>
+        }
+
         <div class="cart-items">
             @foreach (var item in Model)
             {
