More Meaningful Error messages

--- a/E-Commerce/Views/Category/CategoryDetails.cshtml
+++ b/E-Commerce/Views/Category/CategoryDetails.cshtml
@@ -17,7 +17,7 @@
         }
         .button-container {
             display: flex;
-            gap: 10px; /* Adjust the gap between the buttons as needed */
+            gap: 10px; 
         }
 
             .button-container button {
