--- a/E-Commerce/Views/Product/ManageProductDetails.cshtml
+++ b/E-Commerce/Views/Product/ManageProductDetails.cshtml
@@ -174,7 +174,7 @@
                 <p>@Model.Description</p>
                 <br>
                 <div class="button-container">
-                    <form method="get" action="/Product/DeleteProduct/@Model.Id" onsubmit="return confirm('Are you sure you want to delete this product?');">
+                    <form method="post" action="/Product/DeleteProduct/@Model.Id" onsubmit="return confirm('Are you sure you want to delete this product?');">
                         <button type="submit">Delete Product</button>
                     </form>
                     <button onclick="window.location.href='/Product/UpdateProduct/@Model.Id';">Edit Product</button>
